[gd_scene load_steps=26 format=2]

[ext_resource path="res://hero_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://hero_spritesheet_flipped.png" type="Texture" id=3]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 560, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 188, 80, 94 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 282, 80, 94 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 282, 80, 94 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 282, 80, 94 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 282, 80, 94 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 14 ), SubResource( 13 ), SubResource( 12 ), SubResource( 11 ), SubResource( 10 ), SubResource( 9 ) ],
"loop": true,
"name": "left_run",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "die",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.923, 31.8293 )

[sub_resource type="Animation" id=15]
resource_name = "damage"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0498559, 0.0539394, 0.093168, 0.0995813 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.0235294, 0.0235294, 1 ), Color( 1, 0.969639, 0.969639, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "invulnerability"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0968457, 0.197369 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=17]
resource_name = "rest"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147484125
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0.992853, 0.992853, 1 )
position = Vector2( -0.381073, -7.93703 )
frames = SubResource( 8 )
animation = "run"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.108154, -2.01502 )
shape = SubResource( 1 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 15 )
anims/invulnerability = SubResource( 16 )
anims/rest = SubResource( 17 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -242.726
margin_top = -158.071
margin_right = -242.726
margin_bottom = -158.071

[node name="HealthBar" parent="HealthBar" index="0"]
margin_left = 208.059
margin_top = 108.08
margin_right = 883.059
margin_bottom = 199.08
rect_scale = Vector2( 0.1, 0.1 )
size_flags_stretch_ratio = 0.0
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]

[editable path="HealthBar"]
